--- a/src/Components/DescriptionBox/DescriptionBox.css
+++ b/src/Components/DescriptionBox/DescriptionBox.css
@@ -24,5 +24,19 @@
     gap: 25px;
     border: 1px solid #d0d0d0;
     padding: 48px;
-    padding-bottom: 70px;    
-}    
+    padding-bottom: 70px;
+    text-align: justify;
+}
+@media(max-width: 1280px) {
+    .descriptionbox {
+        margin: 60px;
+    }
+}
+@media(max-width: 800px) {
+    .descriptionbox {
+        margin: 60px 20px;
+    }
+    .descriptionbox-description {
+        font-size: 14px;
+    }
+}
