--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+    padding-top: 50px;
+    background: #e3e6f3;
 }
 .footer-logo {
     display: flex;
