--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,7 +1,8 @@
 .hero {
     height: 100vh;
-    background: linear-gradient(180deg, #75d1ff, #e1ffea22 60%);
+    background: #e3e6f3;
     display: flex;
+    /* background-color: #e3e6f3; */
 }
 .hero-left {
     flex: 1;
