--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 10px;
     margin-bottom: 100px;
+    background: #e3e6f3;
 }
 .new-collections h1 {
     color: #171717;
