--- a/src/Pages/CSS/LoginSignup.css
+++ b/src/Pages/CSS/LoginSignup.css
@@ -1,15 +1,16 @@
 .loginsignup {
     width: 100%;
     height: 80vh;
-    background: #fce3fe;
+    background: #e3e6f3;
     padding-top: 100px;
 }
 .loginsignup-container {
     width: 580px;
     height: 600px;
-    background: white;
+    background: #e3e6f3;
     margin: auto;
-    padding: 40px 60px;
+    padding: 20px 60px;
+    box-shadow: 0 5px 15px rgba(0.09,0,0,0.09);
 }
 .loginsignup-container h1 {
     margin: 20px 0px;
@@ -58,4 +59,53 @@
     color: #5c5c5c;
     font-size: 18px;
     font-weight: 500;
+}
+@media(max-width: 1280px) {
+    .loginsignup {
+        padding-top: 50px;
+    }
+    .loginsignup-container {
+        width: auto;
+        max-width: 500px;
+        max-height: 500px;
+    }
+    .loginsignup-container h1 {
+        margin: 10px 0px;
+    }
+    .loginsignup-fields {
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .loginsignup-fields input {
+        height: 65px;
+        width: 93%;
+    }
+    .loginsignup-container button {
+        width: 100%;
+    }
+    .loginsignup-login {
+        font-size: 16px;
+    }
+    .loginsignup-agree {
+        font-size: 14px;
+        gap: 10px;
+    }
+}
+@media(max-width: 800px) {
+    .loginsignup-container {
+        padding: 20px 30px;
+    }
+    .loginsignup-container h1 {
+        font-size: 24px;
+    }
+    .loginsignup-fields {
+        margin-top: 20px;
+    }
+    .loginsignup-fields input {
+        height: 50px;
+    }
+    .loginsignup-container button {
+        height: 50px;
+        font-size: 16px;
+    }
 }
